reverted an unsuccessful optimization attempted, added solution tests